Bugfix, newsletter, remove friend
