# ClientApp/src/app/_models/member.ts
@@ -15,4 +15,5 @@ export interface Member {
     city: string;
     country: string;
     photo: Photo;
+    IsSubscribedToNewsletter: boolean;
 }
