# Proiect_licenta/DTO/MemberDto.cs
@@ -18,5 +18,6 @@ namespace Proiect_licenta.DTO
         public string City { get; set; }
         public string Country { get; set; }
         public PhotoDto ProfilePicture { get; set; }
+        public bool IsSubscribedToNewsletter { get; set; }
     }
 }
